2007-08-21  Adam Roben  <aroben@apple.com>

        * platform/win/Skipped: Added a couple more failures.

2007-08-21  Adam Roben  <aroben@apple.com>

        * platform/win/Skipped: Added some more failing tests.

2007-08-21  Mitz Pettel  <mitz@webkit.org>

        Reviewed by Darin.

        - test for http://bugs.webkit.org/show_bug.cgi?id=15010
          <rdar://problem/5423956> REGRESSION (r25000-r25065): Table rendering broken by a recent nightly

        * fast/table/max-width-integer-overflow.html: Added.
        * platform/mac/fast/table: Added.
        * platform/mac/fast/table/max-width-integer-overflow-expected.checksum: Added.
        * platform/mac/fast/table/max-width-integer-overflow-expected.png: Added.
        * platform/mac/fast/table/max-width-integer-overflow-expected.txt: Added.

2007-08-20  Mitz Pettel  <mitz@webkit.org>

        Reviewed by Dave Hyatt.

        - repaint test for http://bugs.webkit.org/show_bug.cgi?id=15023
          REGRESSION (r21113-r21143): JavaScript tooltip rendering bug

        * fast/repaint/layer-visibility.html: Added.
        * platform/mac/fast: Added.
        * platform/mac/fast/repaint: Added.
        * platform/mac/fast/repaint/layer-visibility-expected.checksum: Added.
        * platform/mac/fast/repaint/layer-visibility-expected.png: Added.
        * platform/mac/fast/repaint/layer-visibility-expected.txt: Added.

2007-08-20  Adam Roben  <aroben@apple.com>

        Removed a now-working test from the Windows Skipped file

        * platform/win/Skipped:

2007-08-20  Adam Roben  <aroben@apple.com>

        Tests to ensure that local .xhtml and .svg files end up being parsed as XHTML and SVG, respectively

        Reviewed by Darin.

        * fast/loader/local-svg-parsed-as-svg-expected.txt: Added.
        * fast/loader/local-svg-parsed-as-svg.svg: Added.
        * fast/loader/local-xhtml-parsed-as-xhtml-expected.txt: Added.
        * fast/loader/local-xhtml-parsed-as-xhtml.xhtml: Added.
