@@ -1,8 +1,13 @@
-This test sets a non-standard line endings, sets selection, then sets a standard line ending string, and checks selection.
+This test used to check that the selection start was the same before and after a change to the contents of a textarea.
 
-If this test succeeded, you should see 2 lines saying "10, 10" below.
+However now, in order to match the behavior of the other major browsers, selection is moved to the end of the text value when a change occurs to the contents of a text area.
+
+Because this would invalidate the previous test, and that the previous test now perfectly shows the new behavior, we repurposed it.
 
 
-10, 10
-10, 10
+rdar://problem/5423067 gmail is super annoying when trying to add a new name to the TO, CC or BCC fields
+
+
+25, 25
+24, 24
 
